--- a/style/_progressBarServices.scss
+++ b/style/_progressBarServices.scss
@@ -128,11 +128,11 @@ Due to the split circle of progress-left and progress right, we must use the ani
     //animation only the left side if below 50%
     @if $i <=($howManySteps/2) {
         .progress[data-percentage="#{$stepName}"] {
-            .progress-right .progress-bar {
+            .progress-right .progress-bar.start {
                 animation: loading-#{$i} $animationTime linear forwards;
             }
 
-            .progress-left .progress-bar {
+            .progress-left .progress-bar.start {
                 animation: 0;
             }
         }
@@ -141,11 +141,11 @@ Due to the split circle of progress-left and progress right, we must use the ani
     //animation only the right side if above 50%
     @if $i>($howManySteps/2) {
         .progress[data-percentage="#{$stepName}"] {
-            .progress-right .progress-bar {
+            .progress-right .progress-bar.start {
                 animation: loading-#{($howManySteps/2)} $animationTime linear forwards; //set the animation to longest animation
             }
 
-            .progress-left .progress-bar {
+            .progress-left .progress-bar.start {
                 animation: loading-#{$i - ($howManySteps/2)} $animationTime linear forwards $animationTime;
             }
         }
