--- a/style/style.css
+++ b/style/style.css
@@ -368,102 +368,102 @@
 /* This for loop creates the 	necessary css animation names 
 Due to the split circle of progress-left and progress right, we must use the animations on each side. 
 */
-.progress[data-percentage="10"] .progress-right .progress-bar {
+.progress[data-percentage="10"] .progress-right .progress-bar.start {
   -webkit-animation: loading-1 1.5s linear forwards;
           animation: loading-1 1.5s linear forwards;
 }
 
-.progress[data-percentage="10"] .progress-left .progress-bar {
+.progress[data-percentage="10"] .progress-left .progress-bar.start {
   -webkit-animation: 0;
           animation: 0;
 }
 
-.progress[data-percentage="20"] .progress-right .progress-bar {
+.progress[data-percentage="20"] .progress-right .progress-bar.start {
   -webkit-animation: loading-2 1.5s linear forwards;
           animation: loading-2 1.5s linear forwards;
 }
 
-.progress[data-percentage="20"] .progress-left .progress-bar {
+.progress[data-percentage="20"] .progress-left .progress-bar.start {
   -webkit-animation: 0;
           animation: 0;
 }
 
-.progress[data-percentage="30"] .progress-right .progress-bar {
+.progress[data-percentage="30"] .progress-right .progress-bar.start {
   -webkit-animation: loading-3 1.5s linear forwards;
           animation: loading-3 1.5s linear forwards;
 }
 
-.progress[data-percentage="30"] .progress-left .progress-bar {
+.progress[data-percentage="30"] .progress-left .progress-bar.start {
   -webkit-animation: 0;
           animation: 0;
 }
 
-.progress[data-percentage="40"] .progress-right .progress-bar {
+.progress[data-percentage="40"] .progress-right .progress-bar.start {
   -webkit-animation: loading-4 1.5s linear forwards;
           animation: loading-4 1.5s linear forwards;
 }
 
-.progress[data-percentage="40"] .progress-left .progress-bar {
+.progress[data-percentage="40"] .progress-left .progress-bar.start {
   -webkit-animation: 0;
           animation: 0;
 }
 
-.progress[data-percentage="50"] .progress-right .progress-bar {
+.progress[data-percentage="50"] .progress-right .progress-bar.start {
   -webkit-animation: loading-5 1.5s linear forwards;
           animation: loading-5 1.5s linear forwards;
 }
 
-.progress[data-percentage="50"] .progress-left .progress-bar {
+.progress[data-percentage="50"] .progress-left .progress-bar.start {
   -webkit-animation: 0;
           animation: 0;
 }
 
-.progress[data-percentage="60"] .progress-right .progress-bar {
+.progress[data-percentage="60"] .progress-right .progress-bar.start {
   -webkit-animation: loading-5 1.5s linear forwards;
           animation: loading-5 1.5s linear forwards;
 }
 
-.progress[data-percentage="60"] .progress-left .progress-bar {
+.progress[data-percentage="60"] .progress-left .progress-bar.start {
   -webkit-animation: loading-1 1.5s linear forwards 1.5s;
           animation: loading-1 1.5s linear forwards 1.5s;
 }
 
-.progress[data-percentage="70"] .progress-right .progress-bar {
+.progress[data-percentage="70"] .progress-right .progress-bar.start {
   -webkit-animation: loading-5 1.5s linear forwards;
           animation: loading-5 1.5s linear forwards;
 }
 
-.progress[data-percentage="70"] .progress-left .progress-bar {
+.progress[data-percentage="70"] .progress-left .progress-bar.start {
   -webkit-animation: loading-2 1.5s linear forwards 1.5s;
           animation: loading-2 1.5s linear forwards 1.5s;
 }
 
-.progress[data-percentage="80"] .progress-right .progress-bar {
+.progress[data-percentage="80"] .progress-right .progress-bar.start {
   -webkit-animation: loading-5 1.5s linear forwards;
           animation: loading-5 1.5s linear forwards;
 }
 
-.progress[data-percentage="80"] .progress-left .progress-bar {
+.progress[data-percentage="80"] .progress-left .progress-bar.start {
   -webkit-animation: loading-3 1.5s linear forwards 1.5s;
           animation: loading-3 1.5s linear forwards 1.5s;
 }
 
-.progress[data-percentage="90"] .progress-right .progress-bar {
+.progress[data-percentage="90"] .progress-right .progress-bar.start {
   -webkit-animation: loading-5 1.5s linear forwards;
           animation: loading-5 1.5s linear forwards;
 }
 
-.progress[data-percentage="90"] .progress-left .progress-bar {
+.progress[data-percentage="90"] .progress-left .progress-bar.start {
   -webkit-animation: loading-4 1.5s linear forwards 1.5s;
           animation: loading-4 1.5s linear forwards 1.5s;
 }
 
-.progress[data-percentage="100"] .progress-right .progress-bar {
+.progress[data-percentage="100"] .progress-right .progress-bar.start {
   -webkit-animation: loading-5 1.5s linear forwards;
           animation: loading-5 1.5s linear forwards;
 }
 
-.progress[data-percentage="100"] .progress-left .progress-bar {
+.progress[data-percentage="100"] .progress-left .progress-bar.start {
   -webkit-animation: loading-5 1.5s linear forwards 1.5s;
           animation: loading-5 1.5s linear forwards 1.5s;
 }
